--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,44 +1,50 @@
+/* 0 is clearest, 3 darkest */
+element {
+  --theme-0-color: #ECECEC;
+}
+element {
+  --theme-1-color: #65CCB8;
+}
+element {
+  --theme-2-color: #3B945E;
+}
+element {
+  --theme-3-color: #182628;
+}
+
 body {
   padding: 0;
   margin: 0;
-  background: #ECECEC;
+  background: var(--theme-0-color);
 }
 /*--- navigation bar ---*/
 .navbar {
-  background:#65CCB8;
+  background:var(--theme-1-color);
 }
 .nav-link,
 .navbar-brand {
-  color: #182628;
+  color: var(--theme-3-color);
 }
 .nav-link {
   margin-right: 1em !important;
 }
 .nav-link:hover,
 .navbar-brand:hover{
-  color: #3B945E;
+  color: var(--theme-2-color);
 }
 .navbar-collapse {
   justify-content: flex-end;
 }
 
 a {
-  color: #3B945E;
+  color: var(--theme-2-color);
   text-decoration: none;
 }
 
 a:hover {
-    color: #182628;
+    color: var(--theme-3-color);
     text-decoration: none;
 }
 
-/*
-Theme colors
-#182628
-#65CCB8
-#57BA98
-#3B945E
-#F2F2F2
 
-*/
 
