reset password now works. Using sendgrid provided

--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -3,16 +3,15 @@
 
 {% block body %}
   {% if validlink %}
-    <h3>{% trans Change password %}</h3>
+    <h3>{% trans "Change password" %}</h3>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">{% trans Change password %}</button>
+      <button type="submit">{% trans "Change password" %}</button>
     </form>
   {% else %}
     <p>
-      {% trans "The password reset link was invalid, possibly because it has already been used.
-      Please request a new password reset." %}
+      {% trans "The password reset link was invalid, possibly because it has already been used. Please request a new password reset." %}
     </p>
   {% endif %}
 {% endblock %}
