--- a/accounts/templates/registration/password_reset_complete.html
+++ b/accounts/templates/registration/password_reset_complete.html
@@ -3,6 +3,6 @@
 
 {% block body %}
   <p>
-    {% trans "Your password has been set. You may go ahead and" %} <a href="{% url 'signin' %}">{% trans "sign in" %}</a> now.
+    {% trans "Your password has been set. You may go ahead and" %} <a href="{% url 'login' %}">{% trans "sign in" %}</a> now.
   </p>
 {% endblock %}
