--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <title>myOpenStories</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    {% block css %}
+    {% endblock %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block head %}
     {% endblock %}
