--- a/myopenstories/templates/myopenstories/index.html
+++ b/myopenstories/templates/myopenstories/index.html
@@ -4,94 +4,108 @@
 
 {% block head %}
 <link href="carousel.css" rel="stylesheet">
+<link href="{% static 'css/myopenstories.css' %}">
 {% endblock %}
 
 {% block body %}
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="first-slide" src="{% static 'media/presentation_story_alive.jpg' %}" alt="First slide">
-            <div class="container">
-              <div class="carousel-caption text-left">
-                <h1>Example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-            <div class="container">
-              <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-              </div>
-            </div>
-          </div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="first-slide img-fluid" src="{% static 'media/carousel_0.jpg' %}" alt="First slide">
+      <div class="container">
+        <div class="carousel-caption text-left">
+          <p class="d-none d-sm-block"><a class="btn btn-lg btn-primary" href="{% url 'library:index' %}" role="button">Browse the library</a></p>
+	  <h2>Designed by anyone. Free to anyone.</h2>
         </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
+    </div>
+    <div class="carousel-item">
+      <img class="second-slide img-fluid" src="{% static 'media/carousel_1.jpg' %}" alt="Second slide">
+      <div class="container">
+        <div class="carousel-caption text-left">
+          <p class="d-none d-sm-block"><a class="btn btn-lg btn-primary" href="{% url 'reader:index' %}" role="button">Go to interactive teller</a></p>
+	  <h2>Build your own adventures.</h2>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="second-slide img-fluid" src="{% static 'media/carousel_2.jpg' %}" alt="Third slide">
+      <div class="container">
+        <div class="carousel-caption text-left">
+          <p class="d-none d-sm-block"><a class="btn btn-lg btn-primary" href={% url 'signup' %} role="button">Sign up today</a></p>
+	  <h2>Stash favourite stories to find them easily.</h2>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="second-slide img-fluid" src="{% static 'media/carousel_3.jpg' %}" alt="Fourth slide">
+      <div class="container">
+        <div class="carousel-caption text-left">
+          <p class="d-none d-sm-block"><a class="btn btn-lg btn-primary" href="{% url 'reader:index' %}" role="button">Read me a story</a></p>
+	  <h2>Enjoy interactive stories with our reader.</h2>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="third-slide img-fluid" src="{% static 'media/carousel_4.jpg' %}" alt="Fifth slide">
+      <div class="container">
+        <div class="carousel-caption text-right">
+          <p class="d-none d-sm-block"><a class="btn btn-lg btn-primary" href="forum" role="button">Explore the forum</a></p>
+	  <h2>Discuss anything from stories to unicorns.</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<br/>
+<!-- Marketing messaging and featurettes
+     ================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
 
+<div class="container marketing">
 
-      <!-- Marketing messaging and featurettes
-      ================================================== -->
-      <!-- Wrap the rest of the page in another container to center all the content. -->
-
-      <div class="container marketing">
-
-        <!-- Three columns of text below the carousel -->
-        <div class="row">
-          <div class="col-lg-4">
-            <img class="rounded-circle" src="{% static 'media/library_poster.jpg' %}" alt="Generic placeholder image" width="140" height="140">
-            <h2>{% trans "Open library" %}</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-secondary" href="{% url 'library:index' %}" role="button">Explore library &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>{% trans "Integrated story reader" %}</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="{% url 'reader:index' %}" role="button">Start to listen &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>{% trans "Discussion forum" %}</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="forum" role="button">Enjoy discussions &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
-
-
-
-      </div><!-- /.container -->
-
-
-      <!-- FOOTER -->
-      <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
+  <!-- Three columns of text below the carousel -->
+  <div class="row">
+    <div class="col-lg-4">
+      <img class="rounded-circle" src="{% static 'media/library_poster.jpg' %}" alt="Generic placeholder image" width="140" height="140">
+      <h2>{% trans "Open library" %}</h2>
+      <p>Designed to encourage the sharing of interactive stories created by the community for the community, myopenstories is an open repository for stories in the <a href="https://marian-m12l.github.io/studio-website">STUdio</a>* format, a set of tools to read and create interactive stories with possibility to transfer from and to the <a href="https://www.lunii.fr"> lunii</a>* story teller device.</p>
+      <p>Registration is not necessary to browse or download the stories. Registered users can upload their own stories and vote for their favourite stories.</p>
+      <p><a class="btn btn-secondary" href="{% url 'library:index' %}" role="button">Explore library &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <img class="rounded-circle" src="{% static 'media/reader_poster.jpg' %}" alt="Generic placeholder image" width="140" height="140">
+      <h2>{% trans "Story teller" %}</h2>
+      <p>myopenstories includes an interactive story teller which can be used to read interactively any story available in the library.</p>
+      <p> Registration is not necessary to listen to the stories. To facilitate access to your favourite stories, register freely to create your online personal library and stash your private selection. </p>
+      <p><a class="btn btn-secondary" href="{% url 'reader:index' %}" role="button">Bring stories to life &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <img class="rounded-circle" src="{% static 'media/forum_poster.jpg' %}" alt="Generic placeholder image" width="140" height="140">
+      <h2>{% trans "Discussion forum" %}</h2>
+      <p>The discussion forum is the right place to discuss stories, the use of <a href="https://marian-m12l.github.io/studio-website">STUdio</a>* or <a href="https://www.lunii.fr"> lunii</a>* devices, suggestions and improvements for this website, or anything else you think relevant.</p>
+      <p><a class="btn btn-secondary" href="forum" role="button">Enjoy discussions &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+  </div><!-- /.row -->
+</div><!-- /.container -->
+<!-- FOOTER -->
+<footer class="container">
+  <p * class="float-right"><a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  <p>*myopenstories is not affiliated with <a href="https://marian-m12l.github.io/studio-website">STUdio</a> or <a href="https://www.lunii.fr"> lunii</a> in any way  &middot;</p>
+</footer>
 {% endblock %}
