--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,12 @@
 	  <ul class="navbar-nav">
 	    <li class="nav-item">
               {% if user.is_authenticated %}
-	      <a class="nav-link" href="{% url "logout" %}" >{% trans "Logout" %}</a>
+	      <a class="nav-link" href="{% url "logout" %}" >{% trans "Log Out" %}</a>
 	      {% else %}
-	      <a class="nav-link" href="{% url "login" %}" >{% trans "Login" %}</a>
+	      <a class="nav-link" href="{% url "login" %}" >{% trans "Log In" %}</a>
+	    <li class="nav-item">
+	    </li>
+	      <a class="nav-link" href="{% url "signup" %}" >{% trans "Sign up" %}</a>
               {% endif %}
 	    </li>
 	    <li class="nav-item">
@@ -44,7 +47,7 @@
 	</div>
       </nav>
     </header>
-    <div class="content container-fluid">
+    <div class="content container-fluid full-width">
       {% block body %}
       {% endblock %}
     </div>
