--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,33 @@
   </head>
   
   <body>
+    <!-- Modal asking user to login/register-->
+    <div class="modal fade" id="needregisterModal" tabindex="-1" role="dialog" aria-labelledby="needregisterModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+	<div class="modal-content">
+	  <div class="modal-header">
+            <h5 class="modal-title" id="needregisterModalLabel">{% trans "Login required" %}</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+	  </div>
+	  <div class="modal-body">
+            Log in or register freely to use our advanced features
+	    <ul>
+	      <li>Vote for your favourites stories</li>
+	      <li>Upload and share your own creations</li>
+	      <li>Create your online personal library and stash your private selection</li>
+	    </ul>
+	  </div>
+	  <div class="modal-footer">
+            <a href="{% url "login" %}"><button type="button" class="btn btn-primary">Log In</button></a>
+	    <a href="{% url "signup" %}"><button type="button" class="btn btn-primary">Sign Up</button></a>
+	    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	  </div>
+	</div>
+      </div>
+    </div>
+    
     <header>
       <nav class="navbar  navbar-expand-md">
 	<a class="navbar-brand" href="/">myOpenStories</a>
