--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
             </button>
 	  </div>
 	  <div class="modal-body">
-            Log in or register freely to use our advanced features
+            Log in or register freely to use advanced features
 	    <ul>
 	      <li>Vote for your favourites stories</li>
 	      <li>Upload and share your own creations</li>
