--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -2,24 +2,26 @@
 {% load i18n %}
 
 {% block body %}
+<br>
+<div class="container">
+  <h2>{% trans "Log in" %}</h2>
   {% if form.errors %}
     <p>{% trans "Your username and password didn't match. Please try again." %}</p>
   {% endif %}  
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-    <table>
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
+    <p>
+        {{ form.username.label_tag }}<br>
+        {{ form.username }}
+    </p>
+    <p>
+        {{ form.password.label_tag }}<br>
+        {{ form.password }}
+    </p>
     </table>
     <input type="submit" value="login" />
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
-  
-  <p><a href="{% url 'password_reset' %}">{% trans "Lost password?" %}</a></p>
+<p><a href="{% url 'password_reset' %}">{% trans "Lost password?" %}</a></p>
+</div>
 {% endblock %}
