better translation and icons

--- a/myopenstories/templates/myopenstories/index.html
+++ b/myopenstories/templates/myopenstories/index.html
@@ -84,7 +84,7 @@
     <div class="col-lg-4">
       <img class="rounded-circle" src="{% static 'media/library_poster.jpg' %}" alt="Generic placeholder image" width="140" height="140">
       <h2>{% trans "Open library" %}</h2>
-      <p>{% trans "Designed to encourage the sharing of interactive stories created by the community for the community, myopenstories is an open repository for stories in the" %} <a href="https://marian-m12l.github.io/studio-website">STUdio</a>* {% trans "format, a set of tools to read and create interactive stories with possibility to transfer from and to the" %} <a href="https://www.lunii.fr"> lunii</a>* {% trans "story teller device." %}</p>
+      <p>{% trans "Designed to encourage the sharing of interactive stories created by the community for the community, myopenstories is an open repository for stories in the" %} <a href="https://marian-m12l.github.io/studio-website">STUdio</a>* {% trans "format, a set of tools to read and create interactive stories with possibility to transfer from and to the" %} <a href="https://www.lunii.fr"> lunii</a>*{% trans " story teller device." %}</p>
       <p>{% trans "Registration is not necessary to browse or download the stories. Registered users can upload their own stories and vote for their favourite stories." %}</p>
       <p><a class="btn btn-secondary" href="{% url 'library:index' %}" role="button">{% trans "Explore library" %} &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
@@ -98,7 +98,7 @@
     <div class="col-lg-4">
       <img class="rounded-circle" src="{% static 'media/forum_poster.jpg' %}" alt="Generic placeholder image" width="140" height="140">
       <h2>{% trans "Discussion forum" %}</h2>
-      <p>{% trans "The discussion forum is the right place to discuss stories, the use of" %} <a href="https://marian-m12l.github.io/studio-website">STUdio</a>* {% trans or %} <a href="https://www.lunii.fr"> lunii</a>* {% trans "devices, suggestions and improvements for this website, or anything else you think relevant." %}</p>
+      <p>{% trans "The discussion forum is the right place to discuss stories, the use of" %} <a href="https://marian-m12l.github.io/studio-website">STUdio</a>* {% trans "or" %} <a href="https://www.lunii.fr"> lunii</a>* {% trans "devices, suggestions and improvements for this website, or anything else you think relevant." %}</p>
       <p><a class="btn btn-secondary" href="forum" role="button">{% trans "Enjoy discussions" %} &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
