--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>myOpenStories</title>
+    <title>mhios</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     {% block css %}
@@ -46,7 +46,7 @@
     
     <header>
       <nav class="navbar  navbar-expand-md">
-	<a class="navbar-brand" href="/">myOpenStories</a>
+	<a class="navbar-brand" href="/"><span class="logo">mh<span class="logocenter">i</span>os</span></a>
 	<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
 	  <span class="navbar-toggler-icon"></span>
 	</button>
