--- a/reader/templates/reader/index.html
+++ b/reader/templates/reader/index.html
@@ -13,9 +13,9 @@
 <div id="wholeReader">
 <div id="readerFirstRow" class = "row">
   <div class="col-12 readerContainer btnColSmall">
-        <button id="btnFullScreen" class="readerButton" title="{% trans 'Toggle fullscreen' %}"><!--
+            <button id="btnFullScreen" class="readerButton" title="{% trans 'Toggle fullscreen' %}"><!--
      --><svg version="1.1" class="btnSvgSmall" id="toFullScreen" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-120 -120 624.97 624.97" xml:space="preserve">
+	 viewBox="-80 -80 544.97 544.97" xml:space="preserve">
 		<path d="M384.97,12.03c0-6.713-5.317-12.03-12.03-12.03H264.847c-6.833,0-11.922,5.39-11.934,12.223
 			c0,6.821,5.101,11.838,11.934,11.838h96.062l-0.193,96.519c0,6.833,5.197,12.03,12.03,12.03c6.833-0.012,12.03-5.197,12.03-12.03
 			l0.193-108.369c0-0.036-0.012-0.06-0.012-0.084C384.958,12.09,384.97,12.066,384.97,12.03z"/>
@@ -30,7 +30,7 @@
 			c6.713,0,12.03-5.317,12.03-12.03V264.847C384.97,258.014,379.58,252.913,372.747,252.913z"/>
       </svg><!--
       --><svg version="1.1" class="btnSvgSmall" id="fromFullScreen"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-120 -120 625.331 625.331">
+	 viewBox="-80 -80 545.331 545.331">
 		<path d="M264.943,156.665h108.273c6.833,0,11.934-5.39,11.934-12.211c0-6.833-5.101-11.85-11.934-11.838h-96.242V36.181
 			c0-6.833-5.197-12.03-12.03-12.03s-12.03,5.197-12.03,12.03v108.273c0,0.036,0.012,0.06,0.012,0.084
 			c0,0.036-0.012,0.06-0.012,0.096C252.913,151.347,258.23,156.677,264.943,156.665z"/>
@@ -44,8 +44,8 @@
 			c-6.713,0-12.03,5.317-12.03,12.03v108.273c0,6.833,5.39,11.922,12.223,11.934c6.821,0.012,11.838-5.101,11.838-11.922v-96.242
 			H373.3c6.833,0,12.03-5.197,12.03-12.03S380.134,228.678,373.3,228.666z"/>
       </svg><!--
-      --></button>
-    <button id="btnHome" title="{% trans 'Home' %}" class="readerButton readerButtonSwitch" disabled>
+	      --></button>
+	<button id="btnHome" title="{% trans 'Home' %}" class="readerButton readerButtonSwitch" disabled>
       <svg version="1.1" class="btnSvgSmall" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	    viewBox="-50 -50 597.596 597.596" style="enable-background:new 0 0 547.596 547.596;"
 	   xml:space="preserve">
@@ -54,8 +54,8 @@
 		 c0-12.087,9.945-22.108,22.109-22.108h93.865c12.239,0,22.108,9.792,22.108,22.108v145.886h92.947
 		 c12.24,0,22.108-9.945,22.108-22.108v-221.85h75.965C549.021,272.995,552.081,264.886,540.76,254.788z"/>
       </svg>
-    </button><!-- This comment to remove space between buttons	       
---><button  class="readerButton  readerButtonSwitch" id="btnGlobalLibrary" title="{% trans 'Switch to global library' %}" disabled>
+    </button><!--
+	--><button  class="readerButton  readerButtonSwitch" id="btnGlobalLibrary" title="{% trans 'Switch to global library' %}" disabled>
             <svg version="1.1" class="btnSvgSmall"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	   viewBox="-180 -180 1119.5 1119.5">
 	<path d="M748.65,794c0.1-15-5.6-29.2-16.2-40c-10.6-10.7-24.8-16.6-39.8-16.6H72.85v112.1h618.7
@@ -80,7 +80,8 @@
       <svg xmlns="http://www.w3.org/2000/svg" class="btnSvgSmall" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 95 95" >
 	<path d="M83.034,44.719c0.94-5.371-0.068-10.837-2.902-15.559c-3.119-5.197-8.075-8.868-13.956-10.336  c-1.805-0.451-3.657-0.68-5.506-0.68c-8.409,0-16.053,4.631-19.982,11.951c-1.879-1.284-4.1-1.975-6.421-1.975  c-3.09,0-5.983,1.214-8.147,3.419c-1.808,1.842-2.936,4.263-3.206,6.81c-9.064,0.543-16.441,8.08-16.66,17.267  c-0.113,4.732,1.624,9.226,4.89,12.65c3.267,3.426,7.671,5.374,12.405,5.487l56.547,0.005c8.088,0,14.667-6.579,14.667-14.667  C94.763,51.995,89.827,46.085,83.034,44.719z M80.096,70.759H23.969l-0.351-0.005"/>
       </svg>
-    </button>
+	</button>
+	
     <button id="btnPause" class="readerButton" title="{% trans 'Pause story' %}" disabled>
       <svg version="1.1" class="btnSvgSmall" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	   viewBox="-25 -25 325.003 325.003" style="enable-background:new 0 0 300.003 300.003;" xml:space="preserve">
