--- a/reader/templates/reader/index.html
+++ b/reader/templates/reader/index.html
@@ -55,7 +55,7 @@
 		 c12.24,0,22.108-9.945,22.108-22.108v-221.85h75.965C549.021,272.995,552.081,264.886,540.76,254.788z"/>
       </svg>
     </button><!--
-	--><button  class="readerButton  readerButtonSwitch" id="btnGlobalLibrary" title="{% trans 'Switch to global library' %}" disabled>
+	--><button  class="readerButton  readerButtonSwitch" id="btnGlobalLibrary" title="{% trans 'Switch to global library' %}" {{ isUserLibrary|yesno:",disabled" }}>
             <svg version="1.1" class="btnSvgSmall"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	   viewBox="-180 -180 1119.5 1119.5">
 	<path d="M748.65,794c0.1-15-5.6-29.2-16.2-40c-10.6-10.7-24.8-16.6-39.8-16.6H72.85v112.1h618.7
@@ -76,7 +76,7 @@
 		 c11.601,14.8,18.4,33.5,18.2,53.7c-0.2,19.5-7,37.4-18.2,51.7c-16,20.4-41.1,33.5-68.899,33.5H96.65z"/>
       </svg>
     </button><!-- This comment to remove space between buttons	       
---><button  class="readerButton readerButtonSwitch" id="btnUserLibrary" {% if user.is_authenticated %}  title="{% trans 'Switch to personal library' %}" disabled {% else %} class="vote"  data-toggle="modal" data-target="#needregisterModal" {% endif %}>
+--><button  class="readerButton readerButtonSwitch" id="btnUserLibrary"  {{ isUserLibrary|yesno:"disabled," }} {% if user.is_authenticated %}  title="{% trans 'Switch to personal library' %}" {% else %} class="vote"  data-toggle="modal" data-target="#needregisterModal" {% endif %}>
       <svg xmlns="http://www.w3.org/2000/svg" class="btnSvgSmall" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 95 95" >
 	<path d="M83.034,44.719c0.94-5.371-0.068-10.837-2.902-15.559c-3.119-5.197-8.075-8.868-13.956-10.336  c-1.805-0.451-3.657-0.68-5.506-0.68c-8.409,0-16.053,4.631-19.982,11.951c-1.879-1.284-4.1-1.975-6.421-1.975  c-3.09,0-5.983,1.214-8.147,3.419c-1.808,1.842-2.936,4.263-3.206,6.81c-9.064,0.543-16.441,8.08-16.66,17.267  c-0.113,4.732,1.624,9.226,4.89,12.65c3.267,3.426,7.671,5.374,12.405,5.487l56.547,0.005c8.088,0,14.667-6.579,14.667-14.667  C94.763,51.995,89.827,46.085,83.034,44.719z M80.096,70.759H23.969l-0.351-0.005"/>
       </svg>
