--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     {% block css %}
     {% endblock %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     {% block head %}
     {% endblock %}
   </head>
