--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -2,16 +2,20 @@
 {% load i18n %}
 
 {% block body %}
+<br>
+<div class="container">
   {% if validlink %}
-    <h3>{% trans "Change password" %}</h3>
+    <h2>{% trans "Change password" %}</h2>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit">{% trans "Change password" %}</button>
     </form>
   {% else %}
-    <p>
+  <p>
+    <h2>{% trans "Invalid link" %}</h2>
       {% trans "The password reset link was invalid, possibly because it has already been used. Please request a new password reset." %}
     </p>
-  {% endif %}
+    {% endif %}
+</div>
 {% endblock %}
