--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 
 {% block body %}
+<br>
+<div class="container">
   <h2>{% trans "Forgot password?" %}</h2>
   <p>
   {% trans "Please provide your email, and you will receive a link to reset your password." %}
@@ -11,4 +13,5 @@
     {{ form.as_p }}
     <button type="submit">{% trans "Reset my password" %}</button>
   </form>
+</div>
 {% endblock %}
