some translations. Removed debug

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -18,7 +18,8 @@
           <p style="color: red">{{ error }}</p>
         {% endfor %}
       </p>
-    {% endfor %}
+      {% endfor %}
+      <p>{% trans "Your email address is requested in order to facilitate the login and password recovery processes. No other use of your email address is made by us. You address is not shared publicly on the website and not shared with any other third parties." %}</p>
     <button type="submit"> {% trans "Sign up" %} </button>
   </form>
 </div>
