fix static issues

--- a/reader/templates/reader/index.html
+++ b/reader/templates/reader/index.html
@@ -152,6 +152,6 @@
 <script> var storyIdStart = {{ startStoryId }}; </script>
 <script> var isUserLibrary = {{ isUserLibrary|yesno:"true,false" }}; </script>
 <script> var emptyBlackImage = "{% static 'assets/emptyImage.svg' %}" </script>
-<script type="module" src="{% static '/js/storyReader.js' %}"></script>
+<script type="module" src="{% static 'js/storyReader.js' %}"></script>
 {% endblock javascript %}
 
