--- a/templates/base.html
+++ b/templates/base.html
@@ -142,8 +142,8 @@
     </div>
     <script  src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
-    <script src="{% static '/js/myopenstories.js' %}"></script>
-    <script src="{% static '/cookielaw/js/cookielaw.js' %}"></script>
+    <script src="{% static 'js/myopenstories.js' %}"></script>
+    <script src="{% static 'cookielaw/js/cookielaw.js' %}"></script>
     {% block javascript %}
     {% endblock javascript %}
   </body>
