--- a/accounts/templates/registration/password_reset_complete.html
+++ b/accounts/templates/registration/password_reset_complete.html
@@ -2,7 +2,11 @@
 {% load i18n %}
 
 {% block body %}
+<br/>
+<div class="container">
+  <h2>{% trans "Password successfully changed" %}</h2>
   <p>
     {% trans "Your password has been set. You may go ahead and" %} <a href="{% url 'login' %}">{% trans "sign in" %}</a> now.
-  </p>
+    </p>
+  </div>
 {% endblock %}
