--- a/myopenstories/templates/myopenstories/legal.html
+++ b/myopenstories/templates/myopenstories/legal.html
@@ -4,6 +4,7 @@
 
 {% block body %}
 <br/>
+<div class="container">
 <h2>{%trans "Legal information" %}</h2>
 <a href="http://www.mhios.com/">www.mhios.com</a><br>
 <strong>{%trans "Website owner/Publication manager/Development" %}</strong> <br /> Sébastien Blaise –  Rue de l'Agasse, 23, 5030 Gembloux, Belgium - contact@mhios.com<br />
@@ -14,4 +15,5 @@
 <p>{%trans "Our site saves small pieces of text information (cookies) on your device in order to deliver better content and for statistical purposes. You can disable the usage of cookies by changing the settings of your browser. By browsing our website without changing the browser settings you grant us permission to store that information on your device."%}</p>
 
 {%trans "Please contact privacy@mhios.com for any question on our use of your personal data." %}
+</div>
 {% endblock %}
