--- a/templates/confirm_template.html
+++ b/templates/confirm_template.html
@@ -5,7 +5,7 @@
 <br>
 <div class="container">
 {% if success %}
-<h2>{% trans "Accound verified" %}</h2>
+<h2>{% trans "Account verified" %}</h2>
 <p>
   {% trans "You have confirmed your account! You can now" %} <a href="{% url "login" %}">{% trans "log in" %}</a> {% trans "to enjoy all the feature of mhios."%}
 </p>
